--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Admin Sign In</h2>
+        <h2>Super Secret Sign In</h2>
         <form id="signinForm">
             <input type="text" id="username" placeholder="Username">
             <input type="password" id="password" placeholder="Password">
@@ -83,7 +83,7 @@
 
     <div class="modal" id="modal">
         <div class="warning-sign">⚠</div> 
-        <p class="bold-text">Invalid username or password. Please try again.</p>
+        <p class="bold-text">Nice try. I know what you are thinking...BP? Good luck!!</p>
         <button type="button" onclick="closeModal()">OK</button>
     </div>
 
