--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Sign In</title>
+    <title>Super Secret Sign In</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,9 +23,16 @@
         .container {
             width: 300px;
             padding: 20px;
-            background-color: white;
+            background-color: #ffffff; /* White background */
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(15, 8, 8, 0.1);
+            margin-top: 2em; /* Adjust the top margin to move the sign-in box down */
+            margin-left: -2em; /* Move the sign-in box one space to the left */
+            border: 4px solid #02ff02; /* Fluorescent green border */
+        }
+
+        h2 {
+            color: #000; /* Black text color */
         }
 
         input {
@@ -35,12 +42,13 @@
             box-sizing: border-box;
             border: 1px solid #ccc;
             border-radius: 5px;
+            color: #000; /* Black text color for Username and Password labels */
         }
 
         button {
             width: 100%;
-            background-color: #0074d9;
-            color: white;
+            background-color: #010201;
+            color: #f3f7f3; /* Fluorescent green text */
             padding: 10px;
             border: none;
             border-radius: 5px;
@@ -48,7 +56,7 @@
         }
 
         button:hover {
-            background-color: #0056b3;
+            background-color: #59b93c;
         }
 
         .modal {
@@ -57,17 +65,17 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: #000; 
-            color: #00FF00; 
-            padding: 20px;
+            background-color: #000;
+            color: #13f013;
+            padding: 30px; /* Increased padding for a larger modal */
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         .warning-sign {
-            color: #00FF00; 
+            color: #fc0606;
             font-size: 48px;
-            margin-bottom: 10px;
+            margin-bottom: 19px;
         }
     </style>
 </head>
@@ -82,9 +90,9 @@
     </div>
 
     <div class="modal" id="modal">
-        <div class="warning-sign">⚠</div> 
-        <p class="bold-text">Nice try. I know what you are thinking...BP? Good luck!!</p>
-        <button type="button" onclick="closeModal()">OK</button>
+        <div class="warning-sign">⚠</div>
+        <p class="bold-text">Nice try. I know what you are thinking...Burp?</p>
+        <button type="button" onclick="closeModal()">Good Luck</button>
     </div>
 
     <script>
