--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
-            background-image: url('images/bg3.jpg');
+            background-image: url('/images/bg3.jpg');
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
