--- a/public/index.html
+++ b/public/index.html
@@ -23,15 +23,16 @@
         .container {
             width: 300px;
             padding: 20px;
-            background-color: #ffffff;
+            background-color: #ffffff; /* White background */
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(15, 8, 8, 0.1);
-            margin-top: 2em;
-            border: 4px solid #02ff02;
+            margin-top: 2em; /* Adjust the top margin to move the sign-in box down */
+            margin-left: -2em; /* Move the sign-in box one space to the left */
+            border: 4px solid #02ff02; /* Fluorescent green border */
         }
 
         h2 {
-            color: #000;
+            color: #000; /* Black text color */
         }
 
         input {
@@ -41,13 +42,13 @@
             box-sizing: border-box;
             border: 1px solid #ccc;
             border-radius: 5px;
-            color: #000;
+            color: #000; /* Black text color for Username and Password labels */
         }
 
         button {
             width: 100%;
             background-color: #010201;
-            color: #f3f7f3;
+            color: #f3f7f3; /* Fluorescent green text */
             padding: 10px;
             border: none;
             border-radius: 5px;
@@ -55,7 +56,7 @@
         }
 
         button:hover {
-            background-color: #53d32c;
+            background-color: #59b93c;
         }
 
         .modal {
@@ -64,12 +65,10 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: #ffffff;
-            color: #000000;
-            padding: 20px;
+            background-color: #000;
+            color: #13f013;
+            padding: 30px; /* Increased padding for a larger modal */
             border-radius: 10px;
-            border: 3px solid #000000;
-            border-radius: 9px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
@@ -77,10 +76,6 @@
             color: #fc0606;
             font-size: 48px;
             margin-bottom: 19px;
-        }
-        
-        .modal.show {
-            left: 50%; 
         }
     </style>
 </head>
@@ -107,27 +102,32 @@
         });
 
         function showModal() {
-            const modal = document.getElementById('modal');
-            modal.style.display = 'block';
-            modal.classList.add('show'); 
+            document.getElementById('modal').style.display = 'block';
         }
 
         function closeModal() {
-            const modal = document.getElementById('modal');
-            modal.style.display = 'none';
-            modal.classList.remove('show'); 
+            document.getElementById('modal').style.display = 'none';
         }
 
         function handleLogin() {
             const usernameInput = document.querySelector('#username').value;
             const passwordInput = document.querySelector('#password').value;
 
-            // Simulated login
-            if (usernameInput === 'admin' && passwordInput === 'password') {
-                window.location.href = '/admin';
-            } else {
-                showModal();
-            }
+            fetch('/login', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ username: usernameInput, password: passwordInput }),
+            })
+            .then(response => {
+                if (response.status === 200) {
+                    // Successful login
+                    window.location.href = '/admin';
+                } else {
+                    showModal();
+                }
+            });
         }
     </script>
 </body>
